[gd_scene load_steps=13 format=3 uid="uid://bpoigd3cg103n"]

[ext_resource type="Script" path="res://scripts/menus/main.gd" id="1_krxqh"]
[ext_resource type="Texture2D" uid="uid://cmhjy282mipo2" path="res://assets/images/gradient.png" id="2_8t678"]
[ext_resource type="Texture2D" uid="uid://b3a24u1by6r6k" path="res://assets/icons/toggle_on.png" id="3_7koy7"]
[ext_resource type="Texture2D" uid="uid://dmqley5tyhg0v" path="res://assets/icons/toggle_off.png" id="4_epup3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hxipr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8qgrp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6weol"]
content_margin_left = 8.0
bg_color = Color(0.0666667, 0.0666667, 0.105882, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5nl01"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gf1bs"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.0666667, 0.0666667, 0.105882, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lddpu"]
bg_color = Color(0.192157, 0.196078, 0.266667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cop55"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.0941176, 0.0980392, 0.14902, 1)

[sub_resource type="Theme" id="Theme_3bw0g"]
CheckButton/icons/checked = ExtResource("3_7koy7")
CheckButton/icons/checked_disabled = ExtResource("4_epup3")
CheckButton/icons/unchecked = ExtResource("4_epup3")
CheckButton/styles/focus = SubResource("StyleBoxEmpty_8qgrp")
LineEdit/colors/font_color = Color(1, 1, 1, 1)
LineEdit/font_sizes/font_size = 32
LineEdit/styles/focus = SubResource("StyleBoxFlat_6weol")
LineEdit/styles/normal = SubResource("StyleBoxFlat_6weol")
OptionButton/font_sizes/font_size = 64
OptionButton/styles/focus = SubResource("StyleBoxEmpty_5nl01")
OptionButton/styles/normal = SubResource("StyleBoxFlat_gf1bs")
PopupMenu/font_sizes/font_size = 64
PopupMenu/styles/hover = SubResource("StyleBoxFlat_lddpu")
PopupMenu/styles/panel = SubResource("StyleBoxFlat_cop55")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_krxqh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8t678")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -296.0
offset_right = 377.0
offset_bottom = -28.0
grow_vertical = 0
alignment = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hxipr")
text = "Play"
alignment = 0

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hxipr")
text = "Settings"
alignment = 0

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hxipr")
text = "Credits"
alignment = 0

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_hxipr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hxipr")
text = "Exit"
alignment = 0

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 456.0
offset_bottom = 191.0
theme_override_font_sizes/font_size = 128
text = "PlenFS"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -336.0
offset_top = -120.0
offset_right = -60.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "VERSION"
horizontal_alignment = 2
vertical_alignment = 2

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_top = 40.0
offset_right = -39.0
offset_bottom = 128.0
grow_horizontal = 0
theme = SubResource("Theme_3bw0g")
selected = 0
item_count = 2
popup/item_0/text = "Day"
popup/item_1/text = "Night"
popup/item_1/id = 1

[connection signal="mouse_entered" from="VBoxContainer/PlayButton" to="." method="_mouse_entered" binds= ["VBoxContainer/PlayButton"]]
[connection signal="mouse_exited" from="VBoxContainer/PlayButton" to="." method="_mouse_exited" binds= ["VBoxContainer/PlayButton"]]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/SettingsButton" to="." method="_mouse_entered" binds= ["VBoxContainer/SettingsButton"]]
[connection signal="mouse_exited" from="VBoxContainer/SettingsButton" to="." method="_mouse_exited" binds= ["VBoxContainer/SettingsButton"]]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/CreditsButton" to="." method="_mouse_entered" binds= ["VBoxContainer/CreditsButton"]]
[connection signal="mouse_exited" from="VBoxContainer/CreditsButton" to="." method="_mouse_exited" binds= ["VBoxContainer/CreditsButton"]]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/ExitButton" to="." method="_mouse_entered" binds= ["VBoxContainer/ExitButton"]]
[connection signal="mouse_exited" from="VBoxContainer/ExitButton" to="." method="_mouse_exited" binds= ["VBoxContainer/ExitButton"]]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
